# LearningOpenGL

./: CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
lib-vc2017/: StaticLib_glad.lib
